--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <div class="subheading mb-3">Bloomberg LP | New York, USA</div>
                             <p><ul>
                                 <li>Responsible in triaging incoming tickets and making sure they are resolved in a timely manner.</li>
-                                <li>Responsible to manage the new releases of the Bloomberg Terminal Softwares to its users.</li>
+                                <li>Responsible for managing new releases of the Bloomberg Terminal Software to its users.</li>
                                 <li>Develop and maintain automation tools to effectively test repetitive tasks on each new software release.</li>
                             </ul></p>
                         </div>
@@ -106,7 +106,7 @@
                                 <li>Empowered my team to innovate and challenge traditional thinking on how to best tackle clients' technical issues.</li>
                                 <li>Established strong interdepartmental relationships and strategies to make valuable contributions to the business.</li>
                                 <li>Built and drove strategies for my team that aligned with the department and business goals in the region.</li>
-                                <li>Involved in recruiting, hiring, and identifying candidates with potential to be successful at the role.</li>
+                                <li>Involved in recruiting, hiring, and identifying candidates with potential to be successful in the role.</li>
                             </ul></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">February 2016 - November 2020</span></div>
@@ -117,9 +117,9 @@
                             <div class="subheading mb-3">Bloomberg LP | San Francisco, USA</div>
                             <p><ul>
                                 <li>In December 2014, was offered the position in the San Francisco office to help in building a brand-new team alongside my Team Leader. Due to that, I was responsible for interviewing candidates for the department, not only in San Francisco, but for other global Bloomberg offices as well.</li>
-                                <li>Training new hires to provide the platinum customer support for the Bloomberg software.</li>
-                                <li>Subject Matter Expert in the Americas region for Desktop API (Bloomberg proprietary Office add-ins), Network (Bloomberg Private Network) related issues</li>
-                                <li>Responsible for delivering the Bloomberg Technical Training Certification (BTTC) for external clients while in San Francisco, I've successfully trained over 60 market data analysts on troubleshooting Bloomberg related products thus improving their understanding of the Bloomberg Terminal.</li>
+                                <li>Training new hires to provide the platinum customer support for the Bloomberg Software.</li>
+                                <li>Subject Matter Expert in the Americas region for Desktop API (Bloomberg proprietary Office add-ins) and Network (Bloomberg Private Network) related issues.</li>
+                                <li>Responsible for delivering the Bloomberg Technical Training Certification (BTTC) for external clients, successfully trained over 60 market data analysts on troubleshooting Bloomberg related products thus improving their understanding of the Bloomberg Terminal.</li>
                             </ul></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2014 - February 2016</span></div>
@@ -129,9 +129,9 @@
                             <h3 class="mb-0">Technical Support Representative / Backup Team Leader</h3>
                             <div class="subheading mb-3">Bloomberg LP | S&atilde;o Paulo, Brazil</div>
                             <p><ul>
-                                <li>As a Technical Support Representative I deliver platinum customer support via phone, chats, and emails. Responsible in guiding clients as quickly and as effective as possible into resolving their issues related to The Bloomberg Terminal, Office Add-ins (DAPI), and Bloomberg proprietary Hardware.</li>
+                                <li>As a Technical Support Representative I deliver platinum customer support via phone, chats, and emails. Responsible in guiding clients as quickly and effective as possible into resolving their issues related to the Bloomberg Terminal, Desktop API (Bloomberg proprietary Office add-ins), and Bloomberg proprietary Hardware.</li>
                                 <li>Responsible for identifying bugs, trends, and suggestions for improvement within our products.</li>
-                                <li>Promoted after 6 months in the role to be the Backup Team Leader for the Latin America region, due to that I assist on monitoring and managing global coverage for the department.</li>
+                                <li>Promoted after 6 months in the role to Backup Team Leader for the Latin American region, where I assisted on monitoring and managing global coverage for the department.</li>
                             </ul></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2013 - December 2014</span></div>
@@ -142,7 +142,7 @@
                             <div class="subheading mb-3">Bloomberg LP | S&atilde;o Paulo, Brazil</div>
                             <p><ul>
                                 <li>Provided support for internal Bloomberg employees experiencing issues with their hardware and software. </li>
-                                <li>Configured loaner devices (laptop/mobile phones) for Bloomberg Sales Team so that they could effectively perform their duties while on a client visit. Also configured loaners for employees visiting the S&atilde;o Paulo office from another Bloomberg Office.</li>
+                                <li>Configured loaner devices (laptop/mobile phones) for Bloomberg Sales Team enabling them to effectively perform their duties while on a client visit. Similarly configured loaners for employees visiting the S&atilde;o Paulo office from another Bloomberg Office.</li>
                                 <li>Configured and assigned phone extensions to new hires that joined the company throughout Latin America (PABX).</li>
                             </ul></p>
                         </div>
@@ -207,7 +207,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>I love learning new things, admitedly I sometimes go too deep down the reddit rabbit hole. I am a lego connoisseur, Formula 1 aficionado, and in my spare time I enjoy watching movies and television shows.</p>
+                    <p>I love learning new things, admittedly I sometimes go too deep down the reddit rabbit hole. I am a Lego connoisseur, Formula 1 aficionado, and in my spare time I enjoy watching movies and television shows.</p>
                     <p>I am always looking for ways to enhance my work and side projects. I achieve that by either reiventing workflows to make them simpler, or by looking into new technologies to apply to my day-to-day life.</p>
                     <p class="mb-0">When forced outdoors, I will relocate to another indoor facility to play squash.</p>
                 </div>
