--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>I love learning new things, admittedly I sometimes go too deep down the reddit rabbit hole. I am a Lego connoisseur, Formula 1 aficionado, and in my spare time I enjoy watching movies and television shows.</p>
-                    <p>I am always looking for ways to enhance my work and side projects. I achieve that by either reiventing workflows to make them simpler, or by looking into new technologies to apply to my day-to-day life.</p>
+                    <p>I am always looking for ways to enhance my work and side projects. I achieve that by either reinventing workflows to make them simpler, or by looking into new technologies to apply to my day-to-day life.</p>
                     <p class="mb-0">When forced outdoors, I will relocate to another indoor facility to play squash.</p>
                 </div>
             </section>
