--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <meta property="og:image" content="https://guilhermesendyk.com/assets/img/profile.jpg" />
         
         <!-- Twitter -->
-        <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://guilhermesendyk.com/" />
-        <meta property="twitter:title" content="Guilherme Sendyk - Triage Engineer" />
-        <meta property="twitter:description" content="Experienced Triage Engineer at Bloomberg LP specializing in technical support, team leadership, and automation." />
-        <meta property="twitter:image" content="https://guilhermesendyk.com/assets/img/profile.jpg" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:url" content="https://guilhermesendyk.com/" />
+        <meta name="twitter:title" content="Guilherme Sendyk - Triage Engineer" />
+        <meta name="twitter:description" content="Experienced Triage Engineer at Bloomberg LP specializing in technical support, team leadership, and automation." />
+        <meta name="twitter:image" content="https://guilhermesendyk.com/assets/img/profile.jpg" />
         
         <!-- Canonical URL -->
         <link rel="canonical" href="https://guilhermesendyk.com/" />
